# sparkleHelper

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: SparkleConfig.cmake
include/sparkleHelper/: sparkleHelper.hpp
scripts/: generate_appcast.sh  generate_dsa_keys.sh  setup_fresh_env.sh
src/: CMakeLists.txt  sparkleHelper_dummy.cpp  sparkleHelper_mac.mm  sparkleHelper_unix.cpp  sparkleHelper_win32.cpp
tools/webserver/: README.md  appcast-beta.xml  appcast-release.xml  changelog.php  compose.yml
